# Neutron-MCMC

./: analysis.sh  pyproject.toml
NCNRGPU/: Makefile  rs.py  runMCMC.sh
